# scrap_mcp

./: .gitignore  README.md  main.py  mcp_module.py  pyproject.toml  test_mcp_module.py
brave-search-module/: brave_search_test.py
brave_search_module/: brave_search_test.py
prompts/: generate_ans_prompt.txt  rewrite_query_prompt.txt
tool/: bing.py  gen_ans.py  goo_api.py  rewrite_query.py  text.py
