[project]
name = "scrap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.11",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "mcp[cli]>=1.9.2",
    "pytest-playwright>=0.7.0",
    "python-dotenv>=1.1.0",
    "trafilatura>=2.0.0",
    "requests>=2.32.0",
    "openai>=1.14.0",
    "playwright>=1.52.0"
]